adding luke bio

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <h1>About Us!</h1>
+        
+        <h2>Luke Schields</h2>
+        <p>Luke Schields bio here</p>
     </body>
 </html>
