--- a/our-team/index.html
+++ b/our-team/index.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <h1>About Us!</h1>
+        <h2>Alina</h2>
+        <p>Alina's bio here!</p>
+
     </body>
 </html>
