--- a/our-team/index.html
+++ b/our-team/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1>About Us!</h1>
+        <h2>Sly Yushchyshyn</h2>
+        <p>This is where Sly's bio will go.</p>
     </body>
 </html>
