--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <iframe stitle="RELATIVE WORD USE IN UKRAINE COVERAGE (2023)" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Qjx9t/1/" scrolling="yes" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="800" data-external="1">></iframe>
 
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2022)" aria-label="Table" id="datawrapper-chart-4ma8G" src="https://datawrapper.dwcdn.net/4ma8G/1/" scrolling="yes" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="800" data-external="1"></iframe>
-            <iframe src="visualization3.html" frameborder="0" scrolling="no"></iframe>
+            <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2021)" aria-label="Table" id="datawrapper-chart-Da5oL" src="https://datawrapper.dwcdn.net/Da5oL/1/" scrolling="yes" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="800" data-external="1"></iframe>
         </div>
     </body>
 </html>
