changed title of index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Demo Website</title>
+        <title>How the War in Ukraine is Portrayed in U.S. media</title>
     </head>
     <body>
         <h1>Our Demonstration Website</h1>
