--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>How the War in Ukraine is Portrayed in U.S. media</title>
     </head>
     <body>
-        <h1>Our Demonstration Website</h1>
+        <h1>How is the War in Ukraine Portrayed in American Media</h1>
         <a href='our-team/index.html'>Learn more about our team</a>
         <div class="iframe-container">
             <iframe stitle="RELATIVE WORD USE IN UKRAINE COVERAGE (2023)" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Qjx9t/1/" scrolling="yes" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="800" data-external="1">></iframe>
