added styles to styles.css, and linked to index.html

--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html>
     <head>
         <title>How the War in Ukraine is Portrayed in U.S. media</title>
+        <link href="styles.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     </head>
+    
     <body>
         <h1>How is the War in Ukraine Portrayed in American Media</h1>
         <a href='our-team/index.html'>Learn more about our team</a>
 
         <div class = "iframe-header">
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE" style="width; min-width: 100% !important; border: none;" height = "200">
-                <p>RELATIVE WORD USE IN UKRAINE COVERAGE</p></iframe>
+            </iframe>
         </div>
 
         <div class="iframe-container">
