created button for navigation to about us page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <body>
         <h1>How is the War in Ukraine Portrayed in American Media</h1>
-        <a href='our-team/index.html'>Learn more about our team</a>
+
+        <a href="our-team/index.html", class="button-link">Our Team</a>
 
         <div class = "iframe-header">
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE" style="width; min-width: 100% !important; border: none;" height = "200">
@@ -18,7 +19,7 @@
         </div>
 
         <div class="iframe-container">
-            
+
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2021)" aria-label="Table" id="datawrapper-chart-Da5oL" src="https://datawrapper.dwcdn.net/Da5oL/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1"></iframe>
 
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2022)" aria-label="Table" id="datawrapper-chart-4ma8G" src="https://datawrapper.dwcdn.net/4ma8G/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1"></iframe>
