updated Sly's bio

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -8,6 +8,6 @@
         <h2>Luke Schields</h2>
         <p>Luke Schields is an Master in Public Policy student at the Harvard Kennedy School (HKS) where he is focusing on macroeconomic, energy, and trade policy. Prior to attending HKS, Luke worked for 3 years in the United States Senate where he worked on tax, finance, and energy policy.</p>
         <h2>Sly Yushchyshyn</h2>
-        <p>This is where Sly's bio will go.</p>
+        <p>Sly Yushchyshyn is a Master in Public Policy student at HKS, where he is studying political and economic development. Sly previously worked as a data analyst.</p>
     </body>
 </html>
