--- a/our-team/index.html
+++ b/our-team/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Demo Website</title>
+        <title>Our Team</title>
+        <link href="styles.css" rel="stylesheet" />
     </head>
     <body>
         <h1>About Us!</h1>        
