fixed styles sheet linked for our team page

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Our Team</title>
-        <link href="styles.css" rel="stylesheet" />
+        <link href="../styles.css" rel="stylesheet" />
     </head>
     <body>
         <h1>About Us!</h1>        
