added nav buttons

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     </head>
 
     <body>
-        <h1>How is the War in Ukraine Portrayed in American Media</h1>
-
+        <a href="index.html", class="button-link">Home</a>
         <a href="our-team/index.html", class="button-link">Our Team</a>
+        
+        <h1>How is the War in Ukraine Portrayed in American Media</h1>
 
         <div class = "iframe-header">
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE" style="width; min-width: 100% !important; border: none;" height = "200">
