--- a/our-team/index.html
+++ b/our-team/index.html
@@ -5,9 +5,11 @@
         <link href="../styles.css" rel="stylesheet" />
     </head>
     <body>
+        <a href="../index.html", class="button-link">Home</a>
+        <a href="index.html", class="button-link">Our Team</a>
         <h1>About Us!</h1>        
         <h2>Luke Schields</h2>
-        
+
         <p>Luke Schields is an Master in Public Policy student at the Harvard Kennedy School (HKS) where he is focusing on macroeconomic, energy, and trade policy. Prior to attending HKS, Luke worked for 3 years in the United States Senate where he worked on tax, finance, and energy policy.</p>
 
         <h2>Sly Yushchyshyn</h2>
