--- a/our-team/index.html
+++ b/our-team/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Our Team</title>
         <link href="../styles.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <a href="../index.html", class="button-link">Home</a>
