updated button styles

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -8,8 +8,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <a href="../index.html", class="button-link">Home</a>
-        <a href="index.html", class="button-link">Our Team</a>
+        <a href="../index.html", class="button-link-inactive">Home</a>
+        <a href="index.html", class="button-link-active">Our Team</a>
         <h1>About Us!</h1>        
         <h2>Luke Schields</h2>
 
