--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
 
     <body>
-        <a href="index.html", class="button-link">Home</a>
-        <a href="our-team/index.html", class="button-link">Our Team</a>
-        
+        <a href="index.html", class="button-link-active">Home</a>
+        <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
+
         <h1>How is the War in Ukraine Portrayed in American Media</h1>
 
         <div class = "iframe-header">
