--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
 
         <h1>How is the War in Ukraine Portrayed in American Media</h1>
+
+        <p>Alina to add a little note explaining the results below here</p>
 <!-- iframe header -->
         <div class = "iframe-header">
             <p>Select Year:</p>
@@ -30,15 +32,23 @@
 <!-- word charts -->
         <div class="iframe-container">
 
+            <p>Alina to add a little note explaining the results below here</p>
+
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2021)" aria-label="Table" id="datawrapper-chart-Da5oL" src="https://datawrapper.dwcdn.net/Da5oL/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1"></iframe>
+
+            <p>Alina to add a little note explaining the results below here</p>
 
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2022)" aria-label="Table" id="datawrapper-chart-4ma8G" src="https://datawrapper.dwcdn.net/4ma8G/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1"></iframe>
 
+
+             <p>Alina to add a little note explaining the results below here</p>
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2023)" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Qjx9t/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1">></iframe>
         </div>
 
+
 <!-- longitudinal charts -->
     <!-- chart 1 -->
+    <p>Alina to add a little note explaining the results below here</p>
         <div class="iframe-container">
 
             <iframe title="MSNBC COVERAGE OF UKRAINE" aria-label="Interactive area chart" id="datawrapper-chart-dongo" src="https://datawrapper.dwcdn.net/dongo/1/" scrolling="yes" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="365" data-external="1"></iframe>
@@ -47,6 +57,7 @@
         </div>
 
     <!-- chart 2 -->
+    <p>Alina to add a little note explaining the results below here</p>
         <div class="iframe-container">
 
             <iframe title="FOX NEWS COVERAGE OF UKRAINE" aria-label="Interactive area chart" id="datawrapper-chart-EON6G" src="https://datawrapper.dwcdn.net/EON6G/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="362" data-external="1"></iframe>
@@ -55,6 +66,7 @@
         </div>
 
     <!-- chart 3 -->
+    <p>Alina to add a little note explaining the results below here</p>
         <div class="iframe-container">
             <iframe title="CNN COVERAGE OF UKRAINE" aria-label="Interactive area chart" id="datawrapper-chart-4KBpv" src="https://datawrapper.dwcdn.net/4KBpv/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="391" data-external="1"></iframe>
             <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
