added comments in code for easier navigation

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     </head>
 
     <body>
+
+<!-- top navigation bars -->
         <a href="index.html", class="button-link-active">Home</a>
         <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
 
         <h1>How is the War in Ukraine Portrayed in American Media</h1>
-<!-- iframe header -->
+
+<!-- word chart change by year -->
         <div class = "iframe-header">
             <p>Select Year:</p>
 
