--- a/our-team/index.html
+++ b/our-team/index.html
@@ -10,17 +10,18 @@
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
         <a href="index.html", class="button-link-active">Our Team</a>
-        <h1>About Us!</h1>        
-        <h2>Luke Schields</h2>
+        <h1>About Us!</h1>    
 
+<!-- Luke Bio -->    
+        <h2>Luke Schields</h2>
         <p>Luke Schields is an Master in Public Policy student at the Harvard Kennedy School (HKS) where he is focusing on macroeconomic, energy, and trade policy. Prior to attending HKS, Luke worked for 3 years in the United States Senate where he worked on tax, finance, and energy policy.</p>
 
+<!-- Sly Bio -->
         <h2>Sly Yushchyshyn</h2>
-
         <p>Sly Yushchyshyn is a Master in Public Policy student at HKS, where he is studying political and economic development. Sly previously worked as a data analyst.</p>
-  
+
+<!-- Alina Bio -->
         <h2>Alina</h2>
-      
         <p>Alina's bio here!</p>
     </body>
 </html>
