aligned year with selector on word charts and adjusted margins to keep all content within the confines of the screen without scrolling

--- a/index.html
+++ b/index.html
@@ -17,21 +17,20 @@
 
         <h1>How is the War in Ukraine Portrayed in American Media</h1>
 
-<!-- word chart change by year -->
-        <div class = "iframe-header">
-            <p>Select Year:</p>
-
+        <p>Select Year:
             <select onchange="switchVis(this.value)">
                 <option value="Da5oL">2021</option>
                 <option value="4ma8G">2022</option>
                 <option value="Qjx9t">2023</option>
             </select>
-
-            <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Da5oL" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="850"></iframe>
+        </p>
+<!-- word chart change by year -->
+        <div class = "iframe-main">
+            <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Da5oL" scrolling="no" frameborder="0" style="width: 0; min-width: 50% !important; border: none;" height="850"></iframe>
         </div> 
 
 <!-- word charts -->
-        <div class="iframe-container">
+        <div class="iframe-triple-container">
 
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2021)" aria-label="Table" id="datawrapper-chart-Da5oL" src="https://datawrapper.dwcdn.net/Da5oL/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1"></iframe>
 
