added intro paragraph and rough explanation for the tables

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
         <h1>How is the War in Ukraine Portrayed in American Media</h1>
 
+        <p>On February 24, 2022 Russian launched a full-scale invasion of Ukraine. In response, many NATO member nations, including the United States, have sent financial, humanitarian, and military aid to Ukraine to support their efforts. As the war has played out, providing this aid has become a political football in the United States with the latest relief legislation failing in Congress in December 2023 after being panned by Republican Members of Congress. As support for providing aid to Ukraine begins to show cracks along ideological lines, we aim to investigate how the war in Ukraine is portrayed by media outlets across the political spectrum and how these may contribute to this development.</p>
+
+        <p>The table below demonstrates how often each of the three main network news agencies used a specific word (left column) within three minutes of using the word "Ukraine" compared to the average of all three agencies. A high value indicates a network used the selected word more in comparison to the other networks, while a lower value indcates a network used the selected word less in comparison to the other networks. Each value represents how many standard deviations each networks value is from the average of all three networks.</p>
+
         <p>Select Year:
             <select onchange="switchVis(this.value)">
                 <option value="Da5oL">2021</option>
