--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <p>On February 24, 2022, Russia launched a full-scale invasion of Ukraine. In response, many NATO member nations, including the United States, have sent financial, humanitarian, and military aid to Ukraine to support their efforts. As the war has played out, providing this aid has become a political football in the United States with the latest relief legislation failing in Congress in December 2023 after being panned by Republican Members of Congress. As support for providing aid to Ukraine begins to show cracks along ideological lines, we aim to investigate how the war in Ukraine is portrayed by media outlets across the political spectrum and how these may contribute to this development.</p>
 
-        <p>The table below demonstrates how often each of the three main network news agencies used a specific word (left column) within three minutes of using the word "Ukraine" compared to the average of all three agencies. A high value indicates a network used the selected word more in comparison to the other networks, while a lower value indcates a network used the selected word less in comparison to the other networks. Each value represents how many standard deviations each networks value is from the average of all three networks.</p>
+        <p>The table below demonstrates how often each of the three main network news agencies used a specific word (left column) within three minutes of using the word "Ukraine" compared to the average of all three agencies. A high value indicates a network used the selected word more in comparison to the other networks, while a lower value indcates a network used the selected word less in comparison to the other networks. Each value represents how many standard deviations each networks value is from the average of all three networks. All data is cumulative by year.</p>
 
 <!-- word chart change by year -->
 
@@ -46,7 +46,8 @@
 
             <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2023)" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Qjx9t/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1">></iframe>
         </div>
-
+        <p>We also examined the volume of coverage the main three cable news networks dedicate to stories regarding Ukraine over the course of the war and compare it to the volume of stories about Ukraine mentioning either "corrupt", "Biden", or "Burisma". Surprisingly, all three outlets produce similar trends throughout their coverage.</p>
+        
 <!-- longitudinal charts -->
     <!-- chart 1 -->
         <div class="iframe-container">
