made the title bold

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="index.html", class="button-link-active">Home</a>
         <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
 
-        <h1>How is the War in Ukraine Portrayed in American Media</h1>
+        <h1><strong>How the War in Ukraine is Portrayed in the American Media</strong></h1>
 
         <p>On February 24, 2022 Russian launched a full-scale invasion of Ukraine. In response, many NATO member nations, including the United States, have sent financial, humanitarian, and military aid to Ukraine to support their efforts. As the war has played out, providing this aid has become a political football in the United States with the latest relief legislation failing in Congress in December 2023 after being panned by Republican Members of Congress. As support for providing aid to Ukraine begins to show cracks along ideological lines, we aim to investigate how the war in Ukraine is portrayed by media outlets across the political spectrum and how these may contribute to this development.</p>
 
