--- a/our-team/index.html
+++ b/our-team/index.html
@@ -10,7 +10,7 @@
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
         <a href="index.html", class="button-link-active">Our Team</a>
-        <h1>About Us!</h1>    
+        <h1>About Us</h1>    
 
 <!-- Luke Bio -->    
         <h2>Luke Schields</h2>
@@ -18,7 +18,7 @@
 
 <!-- Sly Bio -->
         <h2>Sly Yushchyshyn</h2>
-        <p>Sly Yushchyshyn is a Master in Public Policy student at HKS, where he is studying political and economic development. Sly previously worked as a data analyst.</p>
+        <p>Sly Yushchyshyn is a Master in Public Policy student at HKS, studying political and economic development. Sly previously worked as a data analyst in the private and public sector.</p>
 
 <!-- Alina Bio -->
         <h2>Alina</h2>
