Rewrote Alina's bio

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -21,6 +21,6 @@
   
         <h2>Alina</h2>
       
-        <p>Alina's bio here!</p>
+        <p>Alina is a first-year Master in Public Administration in International Development (MPA/ID) student at HKS. She also holds an M.Sc. in Applied Mathematics and an MBA in Finance. Alina has previously worked in financial analytics for supply chains and ran a startup development center under USAID.</p>
     </body>
 </html>
