--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
         </div>
 
         <h2>American National Press</h2>
+
+        <p>American national press coverage contains orders of magnitude more sources than television network news. The graphs below pull stories published by sources frequently tweeted by either Democrats or Republicans. The first graph depicts the share of these sources' coverage dedicated to covering Ukraine measured against each other. The second graph depicts the share of these sources' coverage didicated to covering Ukraine including mentions of "corrupt" or "corruption" measured against each other. Noteably, each group's share of coverage dedicated to covering Ukraine appears to be spread evenly between the two sources, while sources most frequently tweeted by Republican voters include more mentions of "corrupt" or "corruption.</p>
     </body>
 </html>
 </script>
