added press coverage graphs

--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
         <h2>American National Press</h2>
 
         <p>American national press coverage contains orders of magnitude more sources than television network news. The graphs below pull stories published by sources frequently tweeted by either Democrats or Republicans. The first graph depicts the share of these sources' coverage dedicated to covering Ukraine measured against each other. The second graph depicts the share of these sources' coverage didicated to covering Ukraine including mentions of "corrupt" or "corruption" measured against each other. Noteably, each group's share of coverage dedicated to covering Ukraine appears to be spread evenly between the two sources, while sources most frequently tweeted by Republican voters include more mentions of "corrupt" or "corruption.</p>
+
+        <div class="iframe-double-container">
+            <iframe title="PERCENT OF COVERAGE DEDICATED TO UKRAINE BY MEDIA SOURCE" aria-label="Interactive area chart" id="datawrapper-chart-Lri3F" src="https://datawrapper.dwcdn.net/Lri3F/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="363" data-external="1"></iframe>
+            <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+            </script>
+
+            <iframe title="PERCENTAGE OF COVERAGE FEATURING UKRAINE WITH MENTIONS OF CORRUPTION" aria-label="Interactive area chart" id="datawrapper-chart-MdeXf" src="https://datawrapper.dwcdn.net/MdeXf/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="356" data-external="1"></iframe>
+            <script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+            </script>
     </body>
 </html>
 </script>
