--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="index.html", class="button-link-active">Home</a>
             <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         </div>
-
+      
         <h1><strong>How the War in Ukraine is Portrayed <br> in the American Media</strong></h1>
 
         <!-- introduction to research -->
@@ -39,12 +39,13 @@
                 </select>
             </p>
 
-            <div class="content">
+            <div class = "iframe-main">
                 <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Da5oL" scrolling="no" frameborder="0" style="width: 0; min-width: 50% !important; border: none;" height="850"></iframe>
             </div> 
 
             <!-- word charts -->
             <div class="iframe-triple-container">
+
                 <!-- <p>Alina to add a little note explaining the results below here</p> -->
 
                 <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2021)" aria-label="Table" id="datawrapper-chart-Da5oL" src="https://datawrapper.dwcdn.net/Da5oL/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1"></iframe>
