adjusting local press graph to be 50% width

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <!--state and local press -->
         <div class="local-press">
-            <iframe title="Mentions of Ukraine across Top 10 Populated States" aria-label="Datawrapper visualization" src="https://datawrapper.dwcdn.net/NQAu8/" scrolling="no" frameborder="0" height="400" style="width: 0px; min-width: 100%; border: none; height: 399px;"></iframe>
+            <iframe title="Mentions of Ukraine across Top 10 Populated States" aria-label="Datawrapper visualization" src="https://datawrapper.dwcdn.net/NQAu8/" scrolling="no" frameborder="0" height="400" style="width: 50%; min-width: 100%; border: none; height: 399px;"></iframe>
         </div>
     </body>
 </html>
